--- a/page.html
+++ b/page.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
-	<body></body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+
+		<script src="indexe.js"></script>
+	</body>
 </html>
