modified:   page.html 	modified:   style.css

--- a/page.html
+++ b/page.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-
+		<h1>Page principale du cours de développement Web</h1>
 		<script src="indexe.js"></script>
 	</body>
 </html>
