--- a/page.html
+++ b/page.html
@@ -11,6 +11,9 @@
 			<p> </p>
 		</div>
 		<div class="page"></div>
+		<footer>
+			<p>test</p>
+		</footer>
 		<script src="indexe.js"></script>
 	</body>
 </html>
