new file:   indexe2.js 	modified:   page.html

--- a/page.html
+++ b/page.html
@@ -14,6 +14,6 @@
 		<footer>
 			<p>test</p>
 		</footer>
-		<script src="indexe.js"></script>
+		<script src="indexePge.js"></script>
 	</body>
 </html>
