modified:   page.html 	modified:   style.css

--- a/page.html
+++ b/page.html
@@ -7,12 +7,26 @@
 		<header>
 			<h1>Page principale du cours de développement Web</h1>
 		</header>
-		<div class="navigation">
-			<p> </p>
+		<div class="main-container">
+			<div class="navigation">
+				<p> </p>
+			</div>
+			<div class="page">
+				<p> </p>
+			</div>
 		</div>
-		<div class="page"></div>
 		<footer>
-			<p>test</p>
+			<div class="footerLeft">
+				<p>Créateur : MONNIER Nathan</p>
+			</div>
+			<div class="footerCenter">
+				<a href="https://github.com/NathanMonn/dev_web_ensea.git">
+					Le code dans github
+				</a>
+			</div>
+			<div class="footerRight">
+				<p>Contact<br> Email : nathan.monnier@ensea.fr</p>
+			</div>
 		</footer>
 		<script src="indexePge.js"></script>
 	</body>
