--- a/page.html
+++ b/page.html
@@ -28,8 +28,7 @@
 					<h1 class="text-center mt-2">Top Games</h1>
 				<div class="album py-5 bg-light">
 					<div class="container">
-						<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-														
+						<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">						
 						</div>
 					</div>
 				</div>
@@ -48,6 +47,22 @@
 				<p>Contact<br> Email : nathan.monnier@ensea.fr</p>
 			</div>
 		</footer>
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5" id="exampleModalLabel">Titre du modal</h1>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						Détails du jeu
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+					</div>
+				</div>
+			</div>
+		</div>	
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="indexePge.js"></script>
 	</body>
