modified:   indexePge.js 	modified:   page.html 	new file:   sqlite-queries

--- a/page.html
+++ b/page.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="page">
 				<section>
-					<h1 class="text-center mt-2">Top Games</h1>
+					<h1 class="text-center mt-2">Cars List</h1>
 				<div class="album py-5 bg-light">
 					<div class="container">
 						<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">						
