--- a/form.html
+++ b/form.html
@@ -1,8 +1,8 @@
 <form>
 	<div class="mb-3">
-		<label for="title" class="form-label"
-			>Title</label
-		>
+		<label for="title" class="form-label">
+			Title
+		</label>
 		<input
 			type="text"
 			class="form-control"
