--- a/page.html
+++ b/page.html
@@ -15,13 +15,13 @@
 	</head>
 	<body>
 		<header	class="d-flex flex-wrap justify-content-center py-3 text-bg-dark gap-4">
-		<a href="./page.html"	class="d-flex align-items-center text-white text-decoration-none p-3">
-			<span class="fs-4 text-center">Cars</span>
-		</a>
-		<a class="d-flex align-items-center text-white text-decoration-none text-bg-secondary p-3" href="./login.html">
-			<span class="fs-4 text-center">Log In</span>
-		</a>
-	</header>
+			<a href="./page.html"	class="d-flex align-items-center text-white text-decoration-none p-3">
+				<span class="fs-4 text-center">Cars</span>
+			</a>
+			<a class="d-flex align-items-center text-white text-decoration-none text-bg-secondary p-3" href="./login.html">
+				<span class="fs-4 text-center">Log In</span>
+			</a>
+		</header>
 		<div class="main-container">
 			<div class="navigation">
 				<p> </p>
@@ -66,7 +66,8 @@
 				</div>
 			</div>
 		</div>	
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 		<script src="indexePge.js"></script>
+		<script src="./checkLogIn.js"></script>
 	</body>
 </html>
