--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header	class="d-flex flex-wrap justify-content-center py-3 text-bg-dark gap-4">
-			<a href="./page.html" class="d-flex align-items-center text-white text-decoration-none text-bg-secondary p-3">
+			<a href="./index.html" class="d-flex align-items-center text-white text-decoration-none text-bg-secondary p-3">
 				<span class="fs-4 text-center">Cars</span>
 			</a>
 			<a 	href="./login.html" class="d-flex align-items-center text-white text-decoration-none p-3">
@@ -79,7 +79,7 @@
 			</div>
 		</div>	
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="login.js"></script>
 		<script src="./checkLogIn.js"></script>
+		<script src="login.js"></script>
 	</body>
 </html>
